# cloudproof_rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  docker-compose.yml  pyproject.toml
.cargo/: audit.toml
.github/workflows/: benches.yml  build.yml  ci.yml
benches/: BENCHMARKS.md  bench.sh  benches.rs  benches.sh
crates/aesgcm/: Cargo.toml  README.md  pyproject.toml
crates/aesgcm/python/cloudproof_aesgcm/: __init__.pyi
crates/aesgcm/python/tests/: aesgcm_test.py
crates/aesgcm/src/: error.rs  lib.rs
crates/aesgcm/src/core/: aesgcm.rs  mod.rs
crates/aesgcm/src/ffi/: aesgcm.rs  tests.rs
crates/aesgcm/src/pyo3/: aesgcm.rs  mod.rs
crates/aesgcm/src/wasm_bindgen/: aesgcm.rs  mod.rs  tests.rs
crates/anonymization/: Cargo.toml  README.md  pyproject.toml
crates/anonymization/python/: requirements.txt
crates/anonymization/python/cloudproof_anonymization/: __init__.pyi
crates/anonymization/python/tests/: anonymization_test.py
crates/anonymization/src/: lib.rs
crates/anonymization/src/core/: date_helper.rs  error.rs  hash.rs  mod.rs  noise.rs  number.rs  tests.rs  word.rs
crates/anonymization/src/ffi/: tests.rs
crates/anonymization/src/pyo3/: mod.rs  py_hash.rs  py_noise.rs  py_number.rs  py_word.rs
crates/anonymization/src/wasm_bindgen/: hash.rs  mod.rs  noise.rs  number.rs  tests.rs  word.rs
crates/cloudproof/: Cargo.toml  cbindgen.toml
crates/cloudproof/src/: lib.rs
crates/cloudproof/src/ffi/: mod.rs
crates/cloudproof/src/wasm_bindgen/: mod.rs
crates/cover_crypt/: Cargo.toml  README.md  cbindgen.toml  pyproject.toml
crates/cover_crypt/python/: requirements.txt
crates/cover_crypt/python/cloudproof_cover_crypt/: __init__.pyi
crates/cover_crypt/python/tests/: cover_crypt_test.py  test.sh  test_cover_crypt.py
crates/cover_crypt/src/: lib.rs
crates/cover_crypt/src/ffi/: README.md  abe_policy.rs  cc_policy.rs  generate_cc_keys.rs  hybrid_cc_aes.rs  mod.rs  tests.rs
crates/cover_crypt/src/pyo3/: mod.rs  py_abe_policy.rs  py_cover_crypt.rs
crates/cover_crypt/src/wasm/: tests.rs
crates/cover_crypt/src/wasm_bindgen/: abe_policy.rs  generate_cc_keys.rs  hybrid_cc_aes.rs  mod.rs  tests.rs
crates/cover_crypt/tests/: non_regression.rs
crates/ecies/: Cargo.toml  README.md  pyproject.toml
crates/ecies/python/cloudproof_ecies/: __init__.pyi
crates/ecies/python/tests/: ecies_test.py
crates/ecies/src/: lib.rs
crates/ecies/src/ffi/: ecies.rs  tests.rs
crates/ecies/src/pyo3/: ecies.rs  mod.rs
crates/ecies/src/wasm_bindgen/: ecies.rs  mod.rs  tests.rs
crates/ffi_utils/: Cargo.toml
crates/ffi_utils/src/: error.rs  lib.rs  macros.rs
crates/findex/: Cargo.toml  README.md  cbindgen.toml  package-lock.json  pyproject.toml
crates/findex/.cargo/: config.toml
crates/findex/datasets/: expected_db_uids.json  sqlite.db
crates/findex/python/: requirements.txt
crates/findex/python/cloudproof_findex/: __init__.py  __init__.pyi
crates/findex/python/tests/: findex_test.py  test.sh  test_findex.py
crates/findex/src/: cloud.rs  error.rs  lib.rs  logger.rs  ser_de.rs  tests.rs
crates/findex/src/backends/: callback_prefix.rs  error.rs  mod.rs  redis.rs  sqlite.rs  tests.rs
crates/findex/src/backends/cloud/: mod.rs  stores.rs  token.rs
crates/findex/src/backends/custom/: mod.rs
crates/findex/src/backends/custom/ffi/: callbacks.rs  stores.rs
crates/findex/src/backends/custom/python/: callbacks.rs
crates/findex/src/backends/custom/wasm/: callbacks.rs  mod.rs  stores.rs
crates/findex/src/backends/rest/: callback_prefix.rs  mod.rs  stores.rs  token.rs  upsert_data.rs
crates/findex/src/db_interfaces/: error.rs  mod.rs  redis.rs  sqlite.rs  tests.rs
crates/findex/src/db_interfaces/custom/: mod.rs
crates/findex/src/db_interfaces/custom/ffi/: callbacks.rs  mod.rs
crates/findex/src/db_interfaces/custom/python/: callbacks.rs  mod.rs
crates/findex/src/db_interfaces/custom/wasm/: mod.rs  stores.rs
crates/findex/src/db_interfaces/rest/: callback_prefix.rs  findex_cloud_stores.rs  mod.rs  rest_stores.rs  stores.rs  token.rs  upsert_data.rs
crates/findex/src/ffi/: api.rs  error.rs  logger.rs  mod.rs  tests.rs
crates/findex/src/ffi/core/: callbacks.rs  mod.rs  traits.rs  utils.rs
crates/findex/src/implementations/: mod.rs
crates/findex/src/implementations/redis/: callbacks.rs  error.rs  findex.rs  mod.rs
crates/findex/src/implementations/sqlite/: database.rs  findex.rs  mod.rs  utils.rs
crates/findex/src/instantiation/: backend_config.rs  db_config.rs  findex.rs  mod.rs
crates/findex/src/interfaces/: mod.rs
crates/findex/src/interfaces/ffi/: api.rs  mod.rs
crates/findex/src/interfaces/python/: api.rs  macros.rs  mod.rs  types.rs
crates/findex/src/interfaces/wasm/: api.rs  mod.rs  types.rs
crates/findex/src/pyo3/: mod.rs  py_api.rs  py_callbacks.rs  py_structs.rs
crates/findex/src/ser_de/: ffi_ser_de.rs  mod.rs  wasm_ser_de.rs
crates/findex/src/sqlite/: database.rs  error.rs  findex.rs  mod.rs  tests.rs  utils.rs
crates/findex/src/wasm_bindgen/: api.rs  mod.rs
crates/findex/src/wasm_bindgen/core/: mod.rs  traits.rs  types.rs  utils.rs
crates/findex/tests/: database.rs  test_sqlite.rs
crates/findex/tests/redis/: findex.rs  test_redis.rs
crates/findex/tests/sqlite/: database.rs  test_sqlite.rs
crates/fpe/: Cargo.toml  README.md  pyproject.toml
crates/fpe/benches/: BENCHMARKS.md  bench.sh  benches.rs  benches.sh
crates/fpe/python/tests/: fpe_test.py
crates/fpe/src/: alphabet.rs  error.rs  float.rs  integer.rs  lib.rs  tests.rs
crates/fpe/src/core/: alphabet.rs  error.rs  float.rs  integer.rs  tests.rs
crates/fpe/src/ffi/: alphabet.rs  float.rs  integer.rs  mod.rs  tests.rs
crates/fpe/src/pyo3/: mod.rs  py_alphabet.rs  py_float.rs  py_integer.rs
crates/fpe/src/wasm_bindgen/: alphabet.rs  float.rs  integer.rs  mod.rs  tests.rs
glibc-2.17/: Dockerfile  build.sh
scripts/: test.sh  test_python.sh
src/: error.rs  lib.rs
src/cover_crypt/: mod.rs
src/ffi_utils/: error.rs  macros.rs
src/fpe/: alphabet.rs  (+10 more)
tests/: non_regression.rs
(+18 files in other folders)
