[package]
name = "cloudproof_aesgcm"
version = "0.1.0"
authors = ["Emmanuel Coste<emmanuel.coste@cosmian.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Cosmian AES256GCM library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "cloudproof_aesgcm"

[features]
ffi = ["cosmian_ffi_utils"]
python = ["pyo3"]
wasm_bindgen = ["js-sys", "wasm-bindgen"]
default = []

[dependencies]
aes-gcm = "0.10.1"

# Optional dependencies
cosmian_ffi_utils = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
