[package]
name = "cloudproof_anonymization"
version = "0.1.1"
authors = ["Hugo Rosenkranz-costa<hugo.rosenkranz@cosmian.com>"]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Cloudproof Anonymization library"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cloudproof_anonymization"

[features]
default = []
ffi = []
python = ["pyo3"]
wasm_bindgen = ["js-sys", "wasm-bindgen"]

# waiting for ffi and js
[package.metadata.cargo-udeps.ignore]
normal = ["js-sys", "wasm-bindgen"]

[dependencies]
argon2 = "0.5"
base64 = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
cosmian_crypto_core = { workspace = true, features = ["sha3"] }
hex = { workspace = true }
rand = { workspace = true }
rand_distr = "0.4"
regex = "1.10"
sha2 = "0.10"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

# Optional dependencies
js-sys = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5.1"
wasm-bindgen-test = "0.3.38"
