[build-system]
requires = ["maturin>=0.15,<1.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project]
name = "cloudproof_anonymization"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cffi"]
