[package]
name = "cloudproof"
version = "2.0.2"
authors = ["Théophile Brézot<theophile.brezot@cosmian.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Cosmian Cloudproof library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "cloudproof"

[features]
compact_live = ["cloudproof_findex/compact_live"]
cloud = ["cloudproof_findex/cloud"]
ffi = [
  "cloudproof_anonymization/ffi",
  "cloudproof_cover_crypt/ffi",
  "cloudproof_findex/ffi",
  "cloudproof_fpe/ffi",
]
default = [
  "cloudproof_anonymization/default",
  "cloudproof_cover_crypt/default",
  "cloudproof_findex/default",
  "cloudproof_fpe/default",
]

[dependencies]
######
# Watchout: for convenience in development mode, we can set one of those following dependencies such as:
# cloudproof_anonymization = { path = "../anonymization", optional = true }
# cloudproof_cover_crypt = { path = "../cover_crypt", optional = true }
# cloudproof_findex = { path = "../findex", optional = true }
# cloudproof_fpe = { path = "../fpe", optional = true }
# But:
#  - to publish `cloudproof` package, we must publish those sub-crates individually and manually.
#  - cbindgen follows the cargo deps and fetch the crates from crates.io.
######
cloudproof_anonymization = { version = "0.1.0", optional = true }
cloudproof_cover_crypt = { version = "11.0.2", optional = true }
cloudproof_findex = { version = "4.0.1", optional = true }
cloudproof_fpe = { version = "0.1.0", optional = true }
