[package]
name = "cloudproof"
version = "2.3.0"
authors = [
  "Théophile Brézot<theophile.brezot@cosmian.com>",
  "Emmanuel Coste<emmanuel.coste@cosmian.com>",
  "Thibaud Dauce<thibaud.dauce@cosmian.com>",
  "Bruno Grieder<bruno.grieder@cosmian.com>",
  "Hugo Rosenkranz-costa<hugo.rosenkranz@cosmian.com>",
]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Cloudproof library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "cloudproof"

[features]
cloud = ["cloudproof_findex/cloud"]
default = [
  "cloudproof_aesgcm/default",
  "cloudproof_anonymization/default",
  "cloudproof_cover_crypt/default",
  "cloudproof_ecies/default",
  "cloudproof_findex/default",
  "cloudproof_fpe/default",
]
ffi = [
  "cloudproof_aesgcm/ffi",
  "cloudproof_anonymization/ffi",
  "cloudproof_cover_crypt/ffi",
  "cloudproof_ecies/ffi",
  "cloudproof_findex/ffi",
  "cloudproof_fpe/ffi",
]
[dependencies]
######
# Watchout: for convenience in development mode, we can set one of those following dependencies such as:
cloudproof_aesgcm = { path = "../aesgcm", optional = true }
cloudproof_anonymization = { path = "../anonymization", optional = true }
cloudproof_cover_crypt = { path = "../cover_crypt", optional = true }
cloudproof_ecies = { path = "../ecies", optional = true }
cloudproof_findex = { path = "../findex", optional = true }
cloudproof_fpe = { path = "../fpe", optional = true }
# But:
#  - to publish `cloudproof` package, we must publish those sub-crates individually and manually.
#  - cbindgen follows the cargo deps and fetch the crates from crates.io.
######
#cloudproof_aesgcm = { version = "0.1.2", optional = true }
#cloudproof_anonymization = { version = "0.1.1", optional = true }
#cloudproof_cover_crypt = { version = "13.0.0", optional = true }
#cloudproof_ecies = { version = "0.1.2", optional = true }
#cloudproof_findex = { version = "5.0.4", optional = true }
#cloudproof_fpe = { version = "0.2.1", optional = true }
