[package]
name = "cloudproof_cover_crypt"
version = "14.0.0"
authors = ["Théophile Brézot<theophile.brezot@cosmian.com>"]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Covercrypt Cloudproof library"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "cloudproof_cover_crypt"
doctest = false

[features]
default = []
ffi = ["cosmian_ffi_utils", "lazy_static"]
python = ["pyo3"]
wasm = ["js-sys", "wasm-bindgen"]

[dependencies]
cosmian_cover_crypt = { version = "14.0", features = ["serialization"] }
cosmian_crypto_core = { workspace = true }
serde_json = "1.0"

# Optional dependencies
cosmian_ffi_utils = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
lazy_static = { version = "1.4.0", optional = true }
pyo3 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
cosmian_cover_crypt = { version = "14.0", features = ["test_utils"] }
wasm-bindgen-test = "0.3.41"
