[package]
name = "cloudproof_ecies"
version = "0.1.2"
authors = ["Emmanuel Coste<emmanuel.coste@cosmian.com>"]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian ECIES scheme library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "cloudproof_ecies"

[features]
default = []
ffi = ["cosmian_ffi_utils"]
python = ["pyo3"]
wasm_bindgen = ["js-sys", "wasm-bindgen"]

[dependencies]
cosmian_crypto_core = { workspace = true, features = ["ecies", "sha3", "blake", "chacha", "curve25519"]}

# Optional dependencies
cosmian_ffi_utils = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
