[package]
name = "cosmian_ffi_utils"
version = "0.1.3"
authors = ["Théophile Brézot<theophile.brezot@cosmian.com>"]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian FFI tools library"

[lib]
name = "cosmian_ffi_utils"
doctest = false

[features]

[dependencies]
