[package]
name = "cloudproof_findex"
version = "6.0.0"
authors = [
  "Théophile Brézot<theophile.brezot@cosmian.com>",
  "Emmanuel Coste<emmanuel.coste@cosmian.com>",
  "Thibaud Dauce<thibaud.dauce@cosmian.com>",
  "Bruno Grieder<bruno.grieder@cosmian.com>",
  "Hugo Rosenkranz-costa<hugo.rosenkranz@cosmian.com>",
]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Findex Cloudproof library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "cloudproof_findex"

[features]
default = []
serialization = []

ffi = [
  "backend-cloud",
  "backend-ffi",
  "base64",
  "cosmian_ffi_utils",
  "serde_json",
  "serialization",
  "tokio/rt-multi-thread",
  "tracing",
  "tracing-log",
  "tracing-subscriber",
  "tracing-tree",
]

python = [
  "backend-python",
  "backend-redis",
  "backend-sqlite",
  "futures",
  "tokio/rt-multi-thread",
]

wasm_bindgen = [
  "backend-cloud",
  "backend-wasm",
  "hex",
  "js-sys",
  "log",
  "serialization",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
]

backend-cloud = ["base64", "reqwest", "serialization"]
backend-ffi = ["serialization"]
backend-python = ["pyo3"]
backend-redis = ["redis", "tracing"]
backend-sqlite = ["rusqlite"]
backend-wasm = [
  "js-sys",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "serialization",
]

[dependencies]
async-trait = { workspace = true }
# Optional dependencies
# This is a `backend-redis` test dependency that conflicts with `backend-wasm`
# WASM test compilation. Passing it as an optional dependency is dirty I
# couldn't come up with another fix for now.
cosmian_crypto_core = { workspace = true, default-features = false, features = ["ser", "sha3"]}
cosmian_findex = { git = "https://github.com/Cosmian/findex", branch = "fix/cloudproof_rust_integration" }

# Optional dependencies
actix-rt = { version = "2.8", optional = true}
base64 = { workspace = true, optional = true }
cosmian_ffi_utils = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
futures = { version = "0.3.28", optional = true }
log = { version = "0.4.20", optional = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
rand = { workspace = true, optional = true }
redis = { version = "0.23", default-features = false, features = ["connection-manager", "script", "tokio-comp"], optional = true }
reqwest = { version = "0.11.20", default-features = false, optional = true }
rusqlite = { version = "0.29", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }
thiserror = { workspace = true, optional = true }
tokio = { version = "1.32.0", optional = true }
tracing = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-tree = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4.34", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

[dev-dependencies]
base64 = { workspace = true }
faker_rand = "0.1"
futures = "0.3.26"
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
actix-rt = "2.8"
serial_test = "2.0.0"
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
wasm-bindgen-test = "0.3.37"
