[package]
name = "cloudproof_findex"
version = "6.0.0"
authors = [
  "Théophile Brézot<theophile.brezot@cosmian.com>",
  "Emmanuel Coste<emmanuel.coste@cosmian.com>",
  "Thibaud Dauce<thibaud.dauce@cosmian.com>",
  "Bruno Grieder<bruno.grieder@cosmian.com>",
  "Hugo Rosenkranz-costa<hugo.rosenkranz@cosmian.com>",
]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Findex Cloudproof library"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "cloudproof_findex"

[features]
# Actual user features.
default = []

# Meta features implicitly activated.
serialization = []

ffi = [
  "redis-interface",
  "rest-interface",
  "cosmian_ffi_utils",
  "lazy_static",
  "serialization",
  "tokio/rt-multi-thread",
  "cosmian_crypto_core/ser",
]

python = [
  "redis-interface",
  "rest-interface",
  "sqlite-interface",
  "futures",
  "pyo3",
  "tokio/rt-multi-thread",
]

wasm = [
  "rest-interface",
  "js-sys",
  "log",
  "serialization",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "wasm-logger",
  "serialization",
]

redis-interface = ["redis"]
rest-interface = ["base64", "cosmian_crypto_core/ser", "reqwest", "serialization"]
sqlite-interface = ["rusqlite"]

[dependencies]
# Optional dependencies
actix-rt = { version = "2.9", optional = true }
async-trait = { workspace = true }
base64 = { workspace = true, optional = true }
cosmian_crypto_core = { workspace = true }
cosmian_ffi_utils = { workspace = true, optional = true }
cosmian_findex = "6.0.0"
futures = { version = "0.3.29", optional = true }
js-sys = { workspace = true, optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.20", optional = true }
pyo3 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
redis = { version = "0.23", features = [
  "aio",
  "ahash",
  "script",
  "connection-manager",
  "tokio-comp",
], optional = true }
reqwest = { version = "0.11.22", default-features = false, optional = true }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4.39", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

[dev-dependencies]
actix-rt = "2.9"
base64 = { workspace = true }
faker_rand = "0.1"
futures = "0.3.29"
rand = { workspace = true }
serde_json = "1.0.108"
serial_test = "2.0.0"
wasm-bindgen-test = "0.3.39"
