[build-system]
requires = ["maturin>=0.13,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[project]
name = "cloudproof_findex"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cffi"]
