[package]
name = "cloudproof_fpe"
version = "0.2.2"
authors = ["Théophile Brézot<theophile.brezot@cosmian.com>"]
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/cosmian/cloudproof_rust/"
description = "Cosmian Cloudproof FPE library"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "cloudproof_fpe"
doctest = false

[[bench]]
harness = false
name = "benches"

[features]
default = []
ffi = ["cosmian_ffi_utils"]
python = ["pyo3"]
wasm = ["wasm-bindgen"]

[dependencies]
aes = { version = "0.8" }
cosmian_fpe = { version = "0.5.2" }
itertools = { version = "0.10" }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Optional dependencies
cosmian_ffi_utils = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
getrandom = { version = "0.2", features = [
  "js",
] } # required by wasm-bindgen-test
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
wasm-bindgen-test = "0.3.40"
